refactor: collect(Collectors.toList()) -> .toList() 적용 (Java 16+)